--- a/vignettes/Session_3_imaging_assays.Rmd
+++ b/vignettes/Session_3_imaging_assays.Rmd
@@ -273,10 +273,8 @@ Plot ground truth in tissue map
 
 tx_spe_sample_1 |> 
   mutate(in_tissue = TRUE) |> 
-  ggspavis::plotSpots(
-    annotate = "region", 
-    palette = colorRampPalette( brewer.pal(9,"Set1") )(150) 
-        ) + 
+  ggspavis::plotSpots(annotate = "region") + 
+      scale_color_manual(values = colorRampPalette( brewer.pal(9,"Set1") )(150) ) +
   guides(color = "none")
 
 ```
